--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,7 +87,7 @@ flutter:
   assets:
     - assets/images/facebook.png
     - assets/images/google.png
-
+    - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
